# ros2_ws_luke

./: .gitignore  ros_komentoja
install/: local_setup.sh  setup.sh
install/can_msgs_reading/lib/can_msgs_reading/: can_cpp_node
install/can_msgs_reading/share/can_msgs_reading/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_msgs/share/custom_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/message_sync/lib/message_sync/: sync_node
install/message_sync/share/message_sync/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/message_sync_lidar_cam/lib/message_sync_lidar_cam/: sync_node_lidar_cam
install/message_sync_lidar_cam/share/message_sync_lidar_cam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/message_sync_python/lib/message_sync_python/: sync_msg
install/message_sync_python/share/message_sync_python/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2bag/share/ros2bag/: package.sh
install/ros2bag_to_files/lib/ros2bag_to_files/: bag_to_file
install/ros2bag_to_files/share/ros2bag_to_files/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rosbag2/share/rosbag2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rosbag2_compression/include/rosbag2_compression/: base_compressor_interface.hpp  base_decompressor_interface.hpp  compression_factory.hpp  compression_options.hpp  sequential_compression_reader.hpp  sequential_compression_writer.hpp  visibility_control.hpp
install/rosbag2_compression/share/rosbag2_compression/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rosbag2_compression_zstd/include/rosbag2_compression_zstd/: visibility_control.hpp  zstd_compressor.hpp  zstd_decompressor.hpp
install/rosbag2_compression_zstd/share/rosbag2_compression_zstd/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  plugin_description.xml
install/rosbag2_cpp/include/rosbag2_cpp/: converter.hpp  converter_options.hpp  info.hpp  logging.hpp  reader.hpp  serialization_format_converter_factory.hpp  serialization_format_converter_factory_interface.hpp  storage_options.hpp  types.hpp  typesupport_helpers.hpp  visibility_control.hpp  writer.hpp
install/rosbag2_cpp/share/rosbag2_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
install/zstd_vendor/lib/: libzstd.so.1.4.4
log/: latest_build
src/can_msgs_reading/: CMakeLists.txt
src/can_msgs_reading/src/: ISOBUSTractor.hpp  ISOBUSframe.hpp  NMEA2000_node.hpp  can_cpp_node.cpp
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/: Gnsssid.msg  Gogsog.msg  Imusid.msg  Isobus.msg  Sync.msg
src/message_sync/: CMakeLists.txt  package.xml
src/message_sync/src/: sync_node.cpp
src/message_sync_lidar_cam/: CMakeLists.txt  package.xml
src/message_sync_lidar_cam/src/: sync_node_lidar_cam.cpp
src/message_sync_python/: package.xml  setup.cfg  setup.py
src/message_sync_python/config/: sync_override.yaml
src/message_sync_python/message_sync_python/: sync_msg.py
src/message_sync_python_lidar2lidar/: package.xml  setup.cfg  setup.py
src/message_sync_python_lidar2lidar/config/: sync_override.yaml
src/message_sync_python_lidar2lidar/message_sync_python_lidar2lidar/: sync_msg_lidars.py
src/ros2bag_to_files/: package.xml  setup.cfg  setup.py
(+826 files in other folders)
